--- a/templates/Add.html
+++ b/templates/Add.html
@@ -1,23 +1,28 @@
-{% extends "Base.html" %}
-{% block title %}Python | Add{% endblock %}
-
-
-{% block body %}
+{% extends "Base.html" %} {% block title %}Python | Add{% endblock %} {% block body %}
 <form method="POST" action="">
-    <div>
-        <input type="text" name="url">
-        <button type="submit">Add Bookmark</button>
-    </div>
+    {{form.hidden_tag()}}
+    <table>
+        <tr>
+            <td>Please enter the Bookmark:- </td>
+            <td>{{form.url(size=50)}}</td>
+        </tr>
+        <tr>
+            <td>Please enter the Description:- </td>
+            <td>{{form.description(size=50)}}</td>
+        </tr>
+        <tr>
+            <td> </td>
+            <td>
+                <button type="submit">Submit</button>
+            </td>
+        </tr>
+    </table>
 </form>
-{% endblock %}
-
-{%block sidebar%}
- <aside>
-            <h3>This is adding Page</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor.
-                Nunc
-                vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat
-                est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper
-                lorem dapibus velit suscipit ultrices.</p>
-        </aside>
+{% endblock %} {%block sidebar%}
+<aside>
+    <h3>This is adding Page</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula
+        ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis
+        nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
+</aside>
 {%endblock%}
